--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -55,7 +55,8 @@
                     }).then(response => {
                         return response.json()
                     }).then(data=> {
-                        document.getElementById('response').innerHTML = data.json;
+                        let output = '';
+                        document.getElementById('response').innerHTML = output.append(data.json.recordID, "\n",data.json.articleName, "\n",data.json.articleBody, "\n",data.json.date);
                         console.log(data.json);
                     })
                     .catch(error=> console.log('ERROR'))
