Cleanup and giving up on textarea

--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -56,7 +56,8 @@
                         return response.json()
                     }).then(data=> {
                         let output = "";
-                        document.getElementById('response').value = `${data.json.recordID}\n${data.json.articleName}\n ${data.json.articleBody}\n${data.json.date}`;
+                        document.getElementById('response').value =
+                         `RecordID:${data.json.recordID}\n  Article Name:${data.json.articleName}\n  ArticleBody:${data.json.articleBody}\n  Date:${data.json.date}`;
                         console.log(data.json);
                     })
                     .catch(error=> console.log('ERROR'))
@@ -68,9 +69,7 @@
                 };
             </script>
         </form>
-        <textarea>
-            <output id="response">&nbsp;</output>
-        </textarea>
+        <output id="response">&nbsp;</output>
     </body>
 </body>
 
