--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -62,10 +62,31 @@
                     })
                     .catch(error=> console.log('ERROR'))
                 }
+
+                function putRequest()
+                {
+                    let time = new Date();
+                    //Empty body because I don't want any data
+                    fetch('https://httpbin.org/get',{
+                        method:'GET',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        }
+                    }).then(response => {
+                        return response.json()
+                    }).then(data => {
+                        let output = "";
+                        document.getElementById('response').value =
+                         `RecordID:${data.json.recordID}\n  Article Name:${data.json.articleName}\n  ArticleBody:${data.json.articleBody}\n  Date:${data.json.date}`;
+                        console.log(data);
+                    })
+                    .catch(error=> console.log('ERROR'))
+                }
                 
                 window.onload = function()
                 {
                     document.getElementById('postButton').onclick = sendRequest;
+                    document.getElementById('getButton').onclick = putRequest;
                 };
             </script>
         </form>
