--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -56,8 +56,8 @@
                         return response.json()
                     }).then(data=> {
                         let output = "";
-                        document.getElementById('response').value =
-                         `RecordID:${data.json.recordID}\n  Article Name:${data.json.articleName}\n  ArticleBody:${data.json.articleBody}\n  Date:${data.json.date}`;
+                        document.getElementById('response').value = JSON.stringify(data);
+                        //`RecordID:${data.json.recordID}\n  Article Name:${data.json.articleName}\n  ArticleBody:${data.json.articleBody}\n  Date:${data.json.date}`;
                         console.log(data.json);
                     })
                     .catch(error=> console.log('ERROR'))
@@ -75,7 +75,9 @@
                     }).then(response => {
                         return response.json()
                     }).then(data => {
+                        document.getElementById('response').value = JSON.stringify(data);
                         console.log(data);
+
                     })
                     .catch(error=> console.log('ERROR'))
                 }
