--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -57,7 +57,7 @@
                     }).then(data=> {
                         let output = "";
                         //Must reformat into a nicer to see reponse
-                        document.getElementById('response').value = `Data Placed!: \nRecordID:${data.json.recordID}\n  Article Name:${data.json.articleName}\n  ArticleBody:${data.json.articleBody}\n  Date:${data.json.date}`;
+                        document.getElementById('response').value = `Data Placed!:\nRecordID:${data.json.recordID}\nArticle Name:${data.json.articleName}\nArticleBody:${data.json.articleBody}\nDate:${data.json.date}`;
                         console.log(data.json);
                     })
                     .catch(error=> console.log('POST ERROR'))
@@ -65,7 +65,6 @@
 
                 function getRequest()
                 {
-                    let time = new Date();
                     //Empty body because I don't want any data
                     fetch('https://httpbin.org/get',{
                         method:'GET',
@@ -75,9 +74,33 @@
                     }).then(response => {
                         return response.json()
                     }).then(data => {
-                        document.getElementById('response').value = JSON.stringify(data);
+                        document.getElementById('response').value = `This endpoint has like no data so here is your origin:\nOrigin:${data.origin}`;
                         console.log(data);
 
+                    })
+                    .catch(error=> console.log('GET ERROR'))
+                }
+
+                function putRequest()
+                {
+                    let time = new Date();
+                    //PUT is supposed to replace duplicates but since time is a value this pretty much never happens
+                    fetch('https://httpbin.org/get',{
+                        method:'PUT',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            recordID: document.getElementById('record').value,
+                            articleName: document.getElementById('articleName').value,
+                            articleBody: document.getElementById('articleBody').value,
+                            date: time
+                        })
+                    }).then(response => {
+                        return response.json()
+                    }).then(data => {
+                        document.getElementById('response').value = `Data Placed!:\nRecordID:${data.json.recordID}\nArticle Name:${data.json.articleName}\nArticleBody:${data.json.articleBody}\nDate:${data.json.date}`;
+                        console.log(data);
                     })
                     .catch(error=> console.log('GET ERROR'))
                 }
@@ -86,10 +109,11 @@
                 {
                     document.getElementById('postButton').onclick = sendRequest;
                     document.getElementById('getButton').onclick = getRequest;
+                    document.getElementById('putButton').onclick = putRequest;
                 };
             </script>
         </form>
-        <textarea id="response" row="5" cols="40" style="border: none; outline: none; resize:none;"></textarea>
+        <textarea id="response" row="5" cols="40" style="border: none; outline: none; resize:none; height:20%; width: 60%;"></textarea>
     </body>
 </body>
 
