--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -104,10 +104,11 @@
                 function deleteRequest()
                 {
                     fetch('https://httpbin.org/delete',{
-                        method:'DELETE  ',
+                        method:'DELETE',
                     }).then(response => {
-                        console.log(response);
-                        document.getElementById('response').value = `${response.status}`;
+                       return response.json()
+                    }).then(data =>{
+                        console.log(data);
                     })
                     .catch(error=> console.log('DELETE ERROR'))
                 
