--- a/html/methodtest.html
+++ b/html/methodtest.html
@@ -18,11 +18,8 @@
         <h1>Eric Chen's Portfolio</h1>
         <nav class="nav">
             <a href="../index.html" >Home Page</a>
-            <a href="html/Projects.html" >Projects</a>
-            <a href="html/Experiment.html" >Experiment</a>
-            <a href="nativedialogs.html"> nativedialogs</a>
-            <a href="html/crud.html"> crud</a>
-            <a href="html/styledCrud.html"> Styledcrud</a>
+            <a href="../html/methodtest.html">Method Test</a>
+            <a href="webcomponent.html">Web Component</a>
         </nav>
     </header>
     <body>
